test/fixtures/fixtures/type-error/keccak.lys.ast.desugar
|-Document(0,45)
  |-(AstCons)
    |-FunctionDirective(0,45)
      |-(AstCons)
        |-Decorators(0,0)
          <Rule0>
        |-(AstCons)
          |-NoModifier(0,0)
            <Rule0>
          |-FunDeclaration(0,45)
            |-(AstCons)
              |-NameIdentifier(4,10)
                |-Identifier=keccak
              |-(AstCons)
                |-TypeParameters(10,10)
                  <Rule0>
                |-(AstCons)
                  |-FunctionParamsList(10,24)
                    |-(List)(11,23)
                      |-Parameter(11,23)
                        |-(AstCons)
                          |-NameIdentifier(11,16)
                            |-Identifier=input
                          |-Reference(18,23)
                            |-QName(18,23)
                              |-NameIdentifier(18,23)
                                |-Identifier=bytes
                  |-(AstCons)
                    |-ReturnType(24,32)
                      |-Reference(26,31)
                        |-QName(26,31)
                          |-NameIdentifier(26,31)
                            |-Identifier=bytes
                    |-FunctionBody(32,45)
                      |-CodeBlock(34,45)
                        |-Reference(38,43)
                          |-QName(38,43)
                            |-NameIdentifier(38,43)
                              |-Identifier=bytes
    |-EndOfFile=